main-block created

--- a/index.html
+++ b/index.html
@@ -43,8 +43,57 @@
 		</header>
 		<main class="page">
 			<section class="page_main main-block">
+				<div class="main-block__bg bg-main-block">
+					<img class="bg-main-block__image" src="./img/main-block/bg-image.png" alt="background">
+					<img class="bg-main-block__hidden-bg" src="./img/main-block/hidden-background.png" alt="hidden bg">
+				</div>
 				<div class="main-block__container">
-
+					<div class="main-block__body body_main-block">
+						<div class="body_main-block__logo logo-components">
+							<img class="logo__component-label" src="./img/main-block/logo-main-block.png"
+								alt="main-block logo">
+							<img class="logo__component-car" src="./img/main-block/car.svg" alt="car">
+							<img class="logo__component-ellipse" src="./img/main-block/ellipse.svg" alt="ellipse">
+						</div>
+						<div class="body_main-block__content content-main-block">
+							<div class="content-main-block__description">
+								<p>«Bastet car»</p> имеет большой опыт работы в сфере продажи автомобилей из США.
+								Благодаря оптимальной схеме работы приобрела
+								надежную деловую репутацию.
+							</div>
+							<div class="content-main-block__key-points">
+								<ul class="key-points__list">
+									<li class="key-point">
+										<!-- <img src="./img/main-block/point.svg" alt="point"> -->
+										Полный цикл услуг без посредников:
+									</li>
+									<li class="key-point">
+										<img src="./img/main-block/point.svg" alt="point">
+										Таможенная очистка
+									</li>
+									<li class="key-point">
+										<img src="./img/main-block/point.svg" alt="point">
+										Участие в аукционе
+									</li>
+									<li class="key-point">
+										<img src="./img/main-block/point.svg" alt="point">
+										Подбор и доставка
+									</li>
+									<li class="key-point">
+										<img src="./img/main-block/point.svg" alt="point">
+										Страхование
+									</li>
+									<li class="key-point">
+										<img src="./img/main-block/point.svg" alt="point">
+										Ремонт авто
+									</li>
+								</ul>
+							</div>
+							<button type="submit" class="content-main-block__button">
+								Получить предложения
+							</button>
+						</div>
+					</div>
 				</div>
 			</section>
 		</main>
