created section with popular cars

--- a/index.html
+++ b/index.html
@@ -96,6 +96,138 @@
 					</div>
 				</div>
 			</section>
+			<section class="page__popular popular">
+				<div class="popular__container">
+					<div class="popular__title">
+						Самые популярные модели
+					</div>
+					<nav class="popular__cars">
+						<li class="car_1">
+							<div class="car1__bg">
+								<img class="bg-car1-white" src="./img/popular-cars/selected-white-bg.png"
+									alt="white-bg">
+								<img class="bg-car1-gray" src="./img/popular-cars/selected-gray-bg.png" alt="">
+							</div>
+							<div class="car1__content">
+								<img class="car1__photo" src="./img/popular-cars/Mazda CX5.png" alt="">
+								<div class="car1__info">
+									<div class="car1__brand">Mazda CX5</div>
+									<div class="car1__price">
+										3 000 000 ₽
+									</div>
+									<div class="car1__description description-car2">
+										<div class="description-car1__full-price">
+											Стоимость подробнее
+										</div>
+										Модификация 5.7 АТ, мощность 375 л. с., расход в среднем 12,4 литра. Разгон до
+										100 км/ч за 6.1 секунду.
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="car_2">
+							<div class="car2__bg">
+								<img class="bg-car2-white" src="./img/popular-cars/selected-white-bg.png"
+									alt="white-bg">
+								<img class="bg-car2-gray" src="./img/popular-cars/selected-gray-bg.png" alt="">
+							</div>
+							<div class="car2__content">
+								<img class="car2__photo" src="./img/popular-cars/Tesla.png" alt="">
+								<div class="car2__info">
+									<div class="car2__brand">Tesla</div>
+									<div class="car2__price">
+										4 000 000 ₽
+									</div>
+									<div class="car2__description description-car2">
+										<div class="description-car2__full-price">
+											Стоимость подробнее
+										</div>
+										Модификация 5.7 АТ, мощность 375 л. с., расход в среднем 12,4 литра. Разгон до
+										100 км/ч за 6.1 секунду.
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="car_3 car__selected selected-car">
+							<div class="selected-car__bg">
+								<img class="bg-selected-car-white" src="./img/popular-cars/selected-white-bg.png"
+									alt="white-bg">
+								<img class="bg-selected-car-gray" src="./img/popular-cars/selected-gray-bg.png" alt="">
+							</div>
+							<div class="selected-car__content">
+								<img class="selected-car__photo" src="./img/popular-cars/Dodge Challenger.png" alt="">
+								<div class="selected-car__info">
+									<div class="selected-car__brand">Dodge Challenger</div>
+									<div class="selected-car__price">
+										5 000 000 ₽
+									</div>
+									<div class="selected-car__description description-selected-car">
+										<div class="description-selected-car__full-price">
+											Стоимость подробнее
+										</div>
+										Модификация 5.7 АТ, мощность 375 л. с., расход в среднем 12,4 литра. Разгон до
+										100 км/ч за 6.1 секунду.
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="car_4">
+							<div class="car4__bg">
+								<img class="bg-car4-white" src="./img/popular-cars/selected-white-bg.png"
+									alt="white-bg">
+								<img class="bg-car4-gray" src="./img/popular-cars/selected-gray-bg.png" alt="">
+							</div>
+							<div class="car4__content">
+								<img class="car4__photo" src="./img/popular-cars/Mazda CX5.png" alt="">
+								<div class="car4__info">
+									<div class="car4__brand">Tesla</div>
+									<div class="car4__price">
+										4 000 000 ₽
+									</div>
+									<div class="car4__description description-car2">
+										<div class="description-car4__full-price">
+											Стоимость подробнее
+										</div>
+										Модификация 5.7 АТ, мощность 375 л. с., расход в среднем 12,4 литра. Разгон до
+										100 км/ч за 6.1 секунду.
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="car_5">
+							<div class="car5__bg">
+								<img class="bg-car5-white" src="./img/popular-cars/selected-white-bg.png"
+									alt="white-bg">
+								<img class="bg-car5-gray" src="./img/popular-cars/selected-gray-bg.png" alt="">
+							</div>
+							<div class="car1__content">
+								<img class="car5__photo" src="./img/popular-cars/Dodge Challenger.png" alt="">
+								<div class="car5__info">
+									<div class="car5__brand">Mazda CX5</div>
+									<div class="car5__price">
+										3 000 000 ₽
+									</div>
+									<div class="car5__description description-car5">
+										<div class="description-car5__full-price">
+											Стоимость подробнее
+										</div>
+										Модификация 5.7 АТ, мощность 375 л. с., расход в среднем 12,4 литра. Разгон до
+										100 км/ч за 6.1 секунду.
+									</div>
+								</div>
+							</div>
+						</li>
+					</nav>
+					<div class="popular__switches switches-popular">
+						<img class="switches-popular__common" src="./img/popular-cars/switch/common-line.svg" alt="">
+						<img class="switches-popular__common" src="./img/popular-cars/switch/common-line.svg" alt="">
+						<img class="switches-popular__selected" src="./img/popular-cars/switch/selected-line.svg"
+							alt="">
+						<img class="switches-popular__common" src="./img/popular-cars/switch/common-line.svg" alt="">
+						<img class="switches-popular__common" src="./img/popular-cars/switch/common-line.svg" alt="">
+					</div>
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
