created help section

--- a/index.html
+++ b/index.html
@@ -228,6 +228,41 @@
 					</div>
 				</div>
 			</section>
+			<section class="page__help help">
+				<div class="help__container">
+					<div class="help__left-column left-column-help">
+						<img class="left-column-help__logo" src="./img/help/bastet-car.png" alt="logo">
+						<div class="left-column-help__illustration illustration-left-column-help ">
+							<img class="illustration-left-column-help__car" src="./img/help/car-image.svg"
+								alt="car-image">
+							<img class="illustration-left-column-help__ellipse" src="./img/help/ellipse.png"
+								alt="ellipse-image">
+						</div>
+					</div>
+					<div class="help__right-column right-column-help">
+						<div class="right-column-help__title">
+							Поможем вам с выбором автомобиля
+						</div>
+						<div class="right-column-help__desc">Специалист свяжется с вами в течение 15 минут</div>
+						<div class="right-column-help__form form-help">
+							<div class="form-help__left-side">
+								<input class="form-help__text help-input" type="text" placeholder="+7(___)-___-__-__">
+								<input class="form-help__number help-input" type="text"
+									placeholder="Максимальный бюджет, ₽">
+								<input class="form-help__type help-input" type="text" placeholder="Тип автомобиля">
+							</div>
+							<div class="form-help__right-side"><input class="form-help__notes" type="text"
+									placeholder="Примечания"></div>
+						</div>
+						<p class="right-column-help__confirm">
+							Нажимая на кнопку вы даёте согласие на обработку ваших персональных данных
+						</p>
+						<button class="right-column-help__button">
+							Получить предложения
+						</button>
+					</div>
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
