created section stages

--- a/index.html
+++ b/index.html
@@ -263,7 +263,186 @@
 					</div>
 				</div>
 			</section>
-		</main>
+			<section class="page__stages stages">
+				<div class="stages__container">
+					<div class="stages__title">
+						Этапы покупки автомобиля из сша
+					</div>
+					<div class="stages__template template-stages">
+						<div class="template-stages__left">
+							<div class="left-items">
+								<div class="left-item item">
+									<div class="item__images">
+										<div class="images-title">
+											<img src="./img/stages/icons/smartphone.svg" alt="smartphone-icon">
+											<div class="content-item__title">
+												Выбор автомобиля
+											</div>
+										</div>
+										<img class="images-number" src="./img/stages/numbers/1.svg" alt="number-1">
+									</div>
+									<div class="content-item__desc">
+										Консультация от опытных специалистов по всем вопросам, связанным с выборором
+										автомобиля
+									</div>
+								</div>
+								<div class="left-item item">
+									<div class="item__images">
+										<div class="images-title">
+											<img src="./img/stages/icons/folder.svg" alt="folder-icon">
+											<div class="content-item__title">
+												История автомобиля </div>
+										</div>
+										<img class="images-number" src="./img/stages/numbers/3.svg" alt="number-3">
+									</div>
+									<div class="content-item__desc">
+										Перед участием в аукционе мы проверяем всю историю данного автомобиля
+									</div>
+								</div>
+								<div class="left-item item">
+									<div class="item__images">
+										<div class="images-title">
+											<img src="./img/stages/icons/diploma.svg" alt="diploma-icon">
+											<div class="content-item__title">
+												Заключение контракта </div>
+										</div>
+										<img class="images-number" src="./img/stages/numbers/5.svg" alt="number-5">
+									</div>
+									<div class="content-item__desc">
+										В контракте определяется окончательная стоимость товара, этапы оплаты, права и
+										обязанности сторон
+									</div>
+								</div>
+								<div class="left-item item">
+									<div class="item__images">
+										<div class="images-title">
+											<img src="./img/stages/icons/key.svg" alt="diploma-icon">
+											<div class="content-item__title">
+												Страхование </div>
+										</div>
+										<img class="images-number" src="./img/stages/numbers/7.svg" alt="number-7">
+									</div>
+									<div class="content-item__desc">
+										Осуществляется страхование груза ведущими местными страховыми компаниями
+									</div>
+								</div>
+								<div class="left-item item">
+									<div class="item__images">
+										<div class="images-title">
+											<img src="./img/stages/icons/funnel.svg" alt="funnel-icon">
+											<div class="content-item__title">
+												Таможенная очистка </div>
+										</div>
+										<img class="images-number" src="./img/stages/numbers/9.svg" alt="number-9">
+									</div>
+									<div class="content-item__desc">
+										Автомобиль выгружается из контейнера и проходит таможенное оформление с помощью
+										нашей брокерской организации
+									</div>
+								</div>
+								<div class="left-item item">
+									<div class="item__images">
+										<div class="images-title">
+											<img src="./img/stages/icons/home.svg" alt="home-icon">
+											<div class="content-item__title">
+												Экспорт в Россию</div>
+										</div>
+										<img class="images-number" src="./img/stages/numbers/11.svg" alt="number-11">
+									</div>
+									<div class="content-item__desc">
+										Доставка в РФ и оформление всех сопутствующих документов для постановки на учёт
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="template-stages__vetical-line">
+							<img src="./img/stages/vertical-line.svg" alt="divider">
+						</div>
+						<div class="template-stages__right">
+							<div class="right-items">
+								<div class="right-item item">
+									<img class="right-item__number" src="./img/stages/numbers/2.svg" alt="number-2">
+									<div class="right-item__content">
+										<div class="right-item__head">
+											<img src="./img/stages/icons/database.svg" alt="database-icon">
+											<div class="content-item__title">
+												Депозитный платеж
+											</div>
+										</div>
+										<div class="content-item__desc">
+											10% от стоимости запланированной аукционной ставки, но не менее 1000 $.
+											Залог
+											подлежит возмещению до покупки автомобиля
+										</div>
+									</div>
+								</div>
+								<div class="right-item item">
+									<img class="right-item__number" src="./img/stages/numbers/4.svg" alt="number-4">
+									<div class="right-item__content">
+										<div class="right-item__head">
+											<img src="./img/stages/icons/megaphone.svg" alt="megaphone-icon">
+											<div class="content-item__title">
+												Участие в аукционе
+											</div>
+										</div>
+										<div class="content-item__desc">
+											Вы можете лично принять участие в аукционе онлайн или оффлайн и совершить
+											покупку на запланированную вами сумму
+										</div>
+									</div>
+								</div>
+								<div class="right-item item">
+									<img class="right-item__number" src="./img/stages/numbers/6.svg" alt="number-6">
+									<div class="right-item__content">
+										<div class="right-item__head">
+											<img src="./img/stages/icons/route.svg" alt="route-icon">
+											<div class="content-item__title">
+												Доставка по Америке
+											</div>
+										</div>
+										<div class="content-item__desc">
+											Транспортировка автомобиля с аукциона в порт, с предоставлением
+											дополнительных фотографий автомобиля покупателю
+										</div>
+									</div>
+								</div>
+								<div class="right-item item">
+									<img class="right-item__number" src="./img/stages/numbers/8.svg" alt="number-8">
+									<div class="right-item__content">
+										<div class="right-item__head">
+											<img src="./img/stages/icons/placeholder.svg" alt="placeholder-icon">
+											<div class="content-item__title">
+												Морская перевозка
+											</div>
+										</div>
+										<div class="content-item__desc">
+											Автомобиль загружается в контейнер под соответствующим номером, с помощью
+											которого покупатель отслеживает груз
+										</div>
+									</div>
+								</div>
+								<div class="right-item item">
+									<img class="right-item__number" src="./img/stages/numbers/10.svg" alt="number-10">
+									<div class="right-item__content">
+										<div class="right-item__head">
+											<img src="./img/stages/icons/success.svg" alt="success-icon">
+											<div class="content-item__title">
+												Выдача автомобиля
+											</div>
+										</div>
+										<div class="content-item__desc">
+											Растаможенный автомобиль продается вам на основании договора купли-продажи
+										</div>
+									</div>
+								</div>
+							</div>
+
+						</div>
+					</div>
+				</div>
+	</div>
+	</section>
+	</main>
 	</div>
 </body>
 
