created section calculator

--- a/index.html
+++ b/index.html
@@ -442,6 +442,29 @@
 				</div>
 
 			</section>
+			<section class="page__calculator calculator">
+				<div class="calculator__container">
+					<img class="calculator-img" src="./img/calculator/calculator.svg" alt="calculator">
+					<div>
+						<div class="calculator__title">
+							Онлайн калькулятор
+						</div>
+						<div class="calculator__content content-calculator">
+							<div class="content-calculator__desc">
+								С помощью нашего калькулятора Вы можете рассчитать стоимость вашего будущего автомобиля
+								прямо сейчас.
+							</div>
+							<div class="content-calculator__short-desc">
+								Если вы знаете, какой авто Вам нужен, просто заполните все поля и нажмите «Рассчитать».
+							</div>
+							<button class="content-calculator__button">
+								Рассчитать стоимость
+							</button>
+						</div>
+					</div>
+
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
