created section range of cars

--- a/index.html
+++ b/index.html
@@ -465,6 +465,35 @@
 
 				</div>
 			</section>
+			<section class="page__range range">
+				<div class="range__container">
+					<div class="range__left-side ">
+						<div class="left-side__title">Ассортимент автомобилей</div>
+						<div class="left-side__desc">
+							<div class="desc__p1">
+								Не важно какой суммой мы обладаем, мы всегда хотим совершить максимально выгодную
+								покупку.
+							</div>
+							<div class="desc__p2">
+								Авто даже с незначительными повреждениями в США продаются с хорошим дисконтом.
+							</div>
+							<div class="desc__p3">
+								Даже учитывая доставку, таможенную очистку и ремонт авто, выходит дешевле российского
+								рынка на <p class="desc__p3-bolt">20%, 30%, а то и 50% !</p>
+							</div>
+						</div>
+					</div>
+					<div class="range__right-side">
+						<img class="right-side__price" src="./img/range/price.svg" alt="price">
+						<a class="right-side__look-more" href="#">
+							Посмотреть ещё
+							<img src="./img/range/arrow.svg" alt="arrow-icon">
+						</a>
+						<img class="right-side__car" src="./img/range/car.svg" alt="">
+					</div>
+				</div>
+
+			</section>
 		</main>
 	</div>
 </body>
