created section business

--- a/index.html
+++ b/index.html
@@ -494,6 +494,33 @@
 				</div>
 
 			</section>
+			<section class="page__business business">
+				<div class="business__container">
+					<div class="business__title">
+						ДЛЯ БИЗНЕСА
+					</div>
+					<div class="business__content">
+						<img class="business__logo" src="./img/business/bastet-car.svg" alt="logo">
+						<div class="business__description description-business">
+							<div class="description-business-desc1">
+								Самые выгодные покупки совершаются тогда, когда мы не привязываемся к конкретному авто,
+								а просто играем выгодный лот.
+							</div>
+							<div class="description-business-desc2">
+								Порой авто в пути купить выгоднее, чем заказывать его с материка.
+							</div>
+							<div class="description-business-desc3">
+								<p>Мы привлекаем инвесторов</p>, чтобы у наших клиентов была возможность <p>выгодно</p>
+								и в кратчайшие сроки приобрести авто, которое уже направляется сюда.
+							</div>
+							<button class="business__button">
+								Услуги для бизнеса
+							</button>
+						</div>
+
+					</div>
+				</div>
+			</section>
 		</main>
 	</div>
 </body>
