--- a/index.html
+++ b/index.html
@@ -522,6 +522,64 @@
 				</div>
 			</section>
 		</main>
+		<footer class="footer">
+			<div class="footer__container container-footer">
+				<div class="container-footer__columns">
+					<div class="container-footer__left left-container-footer">
+						<div class="left-container-footer__logo">
+							<img src="./img/footer/logo.svg" alt="logo">
+						</div>
+						<div class="left-container-footer__description description-left-container-footer">
+							<nav class="description-left-container-footer__nav-menu footer-nav-menu">
+								<div class="footer-nav-menu__item"><a href="#">О компании</a></div>
+								<div class="footer-nav-menu__item"><a href="#">Калькулятор</a></div>
+								<div class="footer-nav-menu__item"><a href="#">Услуги</a></div>
+								<div class="footer-nav-menu__item"><a href="#">Отзывы</a></div>
+							</nav>
+							<div class="description-left-container-footer__contacts footer-contacts">
+								<div class="footer-contacts__tel ">
+									<img src="./img/footer/icons/smartphone.svg" alt="smartphone-icon">
+									<div class="tel-footer-contacts__numbers">
+										<p>8 (988) 356 22 11</p>
+										<p>8 (988) 356 32 41</p>
+									</div>
+								</div>
+								<div class="footer-contacts__location">
+									<img src="./img/footer/icons/location.svg" alt="location-logo">
+									г. Москва, ул. Лермонтовская, д. 36/1
+								</div>
+								<div class="footer-contacts__mail">
+									<img src="./img/footer/icons/email.svg" alt="email-logo">
+									carrrop@mail.com
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="container-footer__right right-container-footer">
+						<div class="right-container-footer__socials">
+							<a href="#"><img src="./img/footer/icons/socials/instagram.svg" alt="instagram-logo"></a>
+							<a href="#"><img src="./img/footer/icons/socials/youtube.svg" alt=""></a>
+							<a href="#"><img src="./img/footer/icons/socials/whatsapp.svg" alt=""></a>
+							<a href="#"><img src="./img/footer/icons/socials/telegram.svg" alt=""></a>
+							<a href="#"><img src="./img/footer/icons/socials/vk.svg" alt=""></a>
+						</div>
+						<div class="right-container-footer__consult consult-footer">
+							<div class="consult-footer__title">
+								Получить консультацию
+							</div>
+							<div class="consult-footer__form">
+								<input class="consult-footer__input" type="email" placeholder="E-mail">
+								<button class="consult-footer__button">Отправить</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="container-footer__data">
+					<p>Политика обработки персональных данных</p>
+					<p>© 2023 *Bastet car*</p>
+				</div>
+			</div>
+		</footer>
 	</div>
 </body>
 
